--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap"
       rel="stylesheet"
     />
-   <script src="https://kit.fontawesome.com/b11eb3d275.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/b11eb3d275.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
@@ -24,7 +27,14 @@
     <title>Portfolio-project</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>Some words about myself.</p>
+    <div class="hero">
+      <h1>Hello,I am</h1>
+      
+      <p>Viktoriia</p>
+      <h2 class="mb-5">Front-end developer based in Romania</h2>
+    <div>
+      <a href="#" class="btn btn-branding">Contact me</a>
+    </div>
+    </div>
   </body>
 </html>
