--- a/index.html
+++ b/index.html
@@ -31,10 +31,24 @@
       <h1>Hello,I am</h1>
       
       <p>Viktoriia</p>
-      <h2 class="mb-5">Front-end developer based in Romania</h2>
-    <div>
+      <h2 class="m-5">Front-end developer based in Romania</h2>
+          <p class="text-center mt-5">Featured Project which my best projects be choice to show</p>
       <a href="#" class="btn btn-branding">Contact me</a>
+  </div>
+  <div class="container">
+    <div class="row"> 
+      <div class="col-6">
+        <div class="project-description">
+        <img src="images/odessapage.jpg" class="img-fluid" alt="Odessa-Opera">
+      </div>
+      <div class="col-6">   
+  <h2 class="mb-5">Opera and Ballet theatre page</h2>
+      <p class="mb-5 text-muted">
+        This is my first project.I love Opera and Ballet theatre and it is fascinating.
+      </p>
+      <a href=""class="btn-branding-outline">Learn more</a>
+    </div>  
     </div>
-    </div>
+  </div>
   </body>
 </html>
