Added div structure

--- a/index.html
+++ b/index.html
@@ -36,19 +36,44 @@
       <a href="#" class="btn btn-branding">Contact me</a>
   </div>
   <div class="container">
-    <div class="row"> 
-      <div class="col-6">
-        <div class="project-description">
+    <div class="row mb-5"> 
+      <div class="col d-none d-lg-block" >
         <img src="images/odessapage.jpg" class="img-fluid" alt="Odessa-Opera">
       </div>
-      <div class="col-6">   
+      <div class="col">
+        <div class="project-description">   
   <h2 class="mb-5">Opera and Ballet theatre page</h2>
       <p class="mb-5 text-muted">
         This is my first project.I love Opera and Ballet theatre and it is fascinating.
       </p>
       <a href=""class="btn-branding-outline">Learn more</a>
-    </div>  
-    </div>
-  </div>
-  </body>
+      </div>
+     </div>
+        <div class="row mb-5"> 
+      <div class="col d-none d-lg-block" >
+        <img src="images/odessapage.jpg" class="img-fluid" alt="Odessa-Opera">
+      </div>
+      <div class="col">
+        <div class="project-description">   
+  <h2 class="mb-5">Opera and Ballet theatre page</h2>
+      <p class="mb-5 text-muted">
+        This is my first project.I love Opera and Ballet theatre and it is fascinating.
+      </p>
+      <a href=""class="btn-branding-outline">Learn more</a>
+      </div>
+     </div>
+        <div class="row mb-5"> 
+      <div class="col d-none d-lg-block" >
+        <img src="images/odessapage.jpg" class="img-fluid" alt="Odessa-Opera">
+      </div>
+      <div class="col">
+        <div class="project-description">   
+  <h2 class="mb-5">Opera and Ballet theatre page</h2>
+      <p class="mb-5 text-muted">
+        This is my first project.I love Opera and Ballet theatre and it is fascinating.
+      </p>
+      <a href=""class="btn-branding-outline">Learn more</a>
+      </div>
+     </div>
+    </body>
 </html>
