--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
      </div>
         <div class="row mb-5"> 
       <div class="col d-none d-lg-block" >
-        <img src="images/odessapage.jpg" class="img-fluid" alt="Odessa-Opera">
+        <img src="images/odessa.jpg" class="img-fluid" alt="Odessa">
       </div>
       <div class="col">
         <div class="project-description">   
@@ -64,13 +64,13 @@
      </div>
         <div class="row mb-5"> 
       <div class="col d-none d-lg-block" >
-        <img src="images/odessapage.jpg" class="img-fluid" alt="Odessa-Opera">
+        <img src="images/weather.jpg" class="img-fluid" alt="Weather-app">
       </div>
       <div class="col">
         <div class="project-description">   
-  <h2 class="mb-5">Opera and Ballet theatre page</h2>
+  <h2 class="mb-5">Weather-project</h2>
       <p class="mb-5 text-muted">
-        This is my first project.I love Opera and Ballet theatre and it is fascinating.
+      It is first time I used Java Script.I enjoyed making this work.
       </p>
       <a href=""class="btn-branding-outline">Learn more</a>
       </div>
