--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
   <div class="container">
     <div class="row mb-5"> 
       <div class="col d-none d-lg-block" >
+        <div class="image-container">
         <img src="images/odessapage.jpg" class="img-fluid" alt="Odessa-Opera">
       </div>
+      </div>
       <div class="col">
         <div class="project-description">   
   <h2 class="mb-5">Opera and Ballet theatre page</h2>
@@ -51,7 +53,9 @@
      </div>
         <div class="row mb-5"> 
       <div class="col d-none d-lg-block" >
+       <div class="image-container">
         <img src="images/odessa.jpg" class="img-fluid" alt="Odessa">
+     </div>
       </div>
       <div class="col">
         <div class="project-description">   
@@ -64,7 +68,9 @@
      </div>
         <div class="row mb-5"> 
       <div class="col d-none d-lg-block" >
+         <div class="image-container">
         <img src="images/weather.jpg" class="img-fluid" alt="Weather-app">
+      </div>
       </div>
       <div class="col">
         <div class="project-description">   
