Added work.html page

--- a/about.html
+++ b/about.html
@@ -27,20 +27,20 @@
     <title>Portfolio-project</title>
   </head>
   <body>
-<div class="about-section container">
+<div class="content-container">
 <div class="row">   
 <div class="col-lg-6">
-  <div class="about-section content">
+  <div class="content">
     <h1 class="mb-4">Hi,I am Viktoriia Sandul</h1>
 <h2 class="mb-4">Front-end developer based in Romania</h2>
-<p  class="mb-4">
- For anyone who wants to start learning code, this workshop is very interesting. You will be challenged with different exercises, and everything is well explained, homework and deadlines are good for keep focus   
+<p  class="mb-4 text-muted">
+ Welcome to my personal website! I’m currently seeking new opportunities in front-end development. Open to work remotely and have flexible hours. I am proficient in HTML, CSS, and JavaScript. Thank you for visiting my website.   
 </p>
 </div>
 <a href="" class="btn btn-branding">View my project</a>
 </div>
 <div class="col-lg-6">
-<img src="images/photocoder.png" alt="photocoder" class="img-fluid">   
+<img src="images/photocoder.png" alt="photocoder" class="img-fluid rounded">   
 </div>
 </div>
 </div>
