--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="row mb-5"> 
       <div class="col d-none d-lg-block" >
         <div class="image-container">
-        <img src="images/odessapage.jpg" class="img-fluid" alt="Odessa-Opera">
+        <img src="images/odessapage.jpg" class="img-fluid rounded" alt="Odessa-Opera">
       </div>
       </div>
       <div class="col">
@@ -54,7 +54,7 @@
         <div class="row mb-5"> 
       <div class="col d-none d-lg-block" >
        <div class="image-container">
-        <img src="images/odessa.jpg" class="img-fluid" alt="Odessa">
+        <img src="images/odessa.jpg" class="img-fluid rounded" alt="Odessa">
      </div>
       </div>
       <div class="col">
@@ -69,7 +69,7 @@
         <div class="row mb-5"> 
       <div class="col d-none d-lg-block" >
          <div class="image-container">
-        <img src="images/weather.jpg" class="img-fluid" alt="Weather-app">
+        <img src="images/weather.jpg" class="img-fluid rounded" alt="Weather-app">
       </div>
       </div>
       <div class="col">
