--- a/work.html
+++ b/work.html
@@ -32,25 +32,25 @@
 <h1 class="mb-5">Take a look at what I've been working on!</h1>
 <div class="row">
 <div class="col-md-6 mb-5">
-<img src="images/odessapage.jpg" class="img-fluid rounded" alt="Odessapage">
+<img src="images/odessapage.jpg" class="img-fluid rounded project-photo" alt="Odessapage">
 <h3 class="text-center">Opera-theatre project</h3>
 <p class="text-center
 ">Built wit html an CSS</p>
 </div>
 <div class="col-md-6 mb-5">
-<img src="images/weather.jpg" class="img-fluid rounded" alt="Odessapage">
+<img src="images/weather.jpg" class="img-fluid rounded project-photo" alt="Odessapage">
 <h3 class="text-center">Weather-project</h3>
 <p class="text-center
 ">Built wit html an CSS,JavaScript </p>
 </div>
 <div class="col-md-6 mb-5">
-<img src="images/odessa.jpg" class="img-fluid rounded" alt="Odessapage">
+<img src="images/odessa.jpg" class="img-fluid rounded project-photo" alt="Odessapage">
 <h3 class="text-center">Weather-project</h3>
 <p class="text-center
 ">Built wit html an CSS,JavaScript </p>
 </div>
 <div class="col-md-6 mb-5">
-<img src="images/weather.jpg" class="img-fluid rounded" alt="Odessapage">
+<img src="images/weather.jpg" class="img-fluid rounded project-photo" alt="Odessapage">
 <h3 class="text-center">Weather-project</h3>
 <p class="text-center
 ">Built wit html an CSS,JavaScript </p>
