--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,16 @@
 <h1 class="mb-5">Let's get in touch</h1>
 <h3>Email</h3>
 <p>
- <a href="mailto:team@shecodes.io">abigaildove86@gmail.com</a>
+ <a href="mailto:team@shecodes.io">
+<i class="fa-solid fa-envelope" id="social"></i>
+abigaildove86@gmail.com</a>
 </p>
-<h3>Linked in</h3>
-<a href=" https://www.linkedin.com/in/frontenddevviktoriiasandul/?locale=en_US" target="blank">linkedin</a> 
+<h3>Linkedin</h3>
+<a href=" https://www.linkedin.com/in/frontenddevviktoriiasandul/?locale=en_US" target="blank">
+  <i class="fa-brands fa-linkedin " id="social"></i></a> 
 
 <h3>Github</h3>
-<a href="https://github.com/VicroriaS" target="blank">github</a>
-
+<a href="https://github.com/VicroriaS" target="blank"><i class="fa-brands fa-square-github"id="social"></i></a>
+</div>
 </body>
 </html>
