--- a/about.html
+++ b/about.html
@@ -4,45 +4,48 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/styles/portfolio.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="styles/portfolio.css" />
+
     <script
-      src="https://kit.fontawesome.com/b11eb3d275.js"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      src="https://kit.fontawesome.com/ddc3ee268a.js"
       crossorigin="anonymous"
     ></script>
-    <title>Portfolio-project</title>
   </head>
   <body>
-<div class="content-container">
-<div class="row">   
-<div class="col-lg-6">
-  <div class="content">
-    <h1 class="mb-4">Hi,I am Viktoriia Sandul</h1>
-<h2 class="mb-4">Front-end developer based in Romania</h2>
-<p  class="mb-4 text-muted">
- Welcome to my personal website! I’m currently seeking new opportunities in front-end development. Open to work remotely and have flexible hours. I am proficient in HTML, CSS, and JavaScript. Thank you for visiting my website.   
-</p>
-</div>
-<a href="" class="btn btn-branding">View my project</a>
-</div>
-<div class="col-lg-6">
-<img src="images/photocoder.png" alt="photocoder" class="img-fluid rounded">   
-</div>
-</div>
-</div>
-</body>    
+    <div class="content-container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="content">
+            <h1 class="mb-4">Hi I am Viktoriia Sandul</h1>
+            <h2 class="mb-4">Frontend Developer, based in Romania.</h2>
+            <p class="mb-5">
+            Welcome to my personal website! I’m currently seeking new opportunities in front-end development. Open to work remotely and have flexible hours. I am proficient in HTML, CSS, and JavaScript. Thank you for visiting my website.
+            </p>
+            <a href="" class="btn btn-branding">See my projects</a>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img src="images/photocoder.png" alt="" class="img-fluid" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
