--- a/work.html
+++ b/work.html
@@ -31,25 +31,24 @@
 <div class="content">
 <h1 class="mb-5">Take a look at what I've been working on!</h1>
 <div class="row">
-<div class="col-md-6 mb-5">
+<div class="col-md-6 mb-5 text-center">
 <img src="images/odessapage.jpg" class="img-fluid rounded project-photo" alt="Odessapage">
-<h3 class="text-center">Opera-theatre project</h3>
+<h3 class="text-center m-0">Opera-theatre project</h3>
 <p class="text-center
 ">Built wit html an CSS</p>
 </div>
-<div class="col-md-6 mb-5">
+<div class="col-md-6 mb-5 text-center" >
 <img src="images/weather.jpg" class="img-fluid rounded project-photo" alt="Odessapage">
-<h3 class="text-center">Weather-project</h3>
+<h3 class="text-center m-0">Weather-project</h3>
 <p class="text-center
 ">Built wit html an CSS,JavaScript </p>
 </div>
-<div class="col-md-6 mb-5">
+<div class="col-md-6 mb-5 text-center">
 <img src="images/odessa.jpg" class="img-fluid rounded project-photo" alt="Odessapage">
-<h3 class="text-center">Weather-project</h3>
-<p class="text-center
-">Built wit html an CSS,JavaScript </p>
+<h3 class="text-center m-0">Weather-project</h3>
+<p class="text-center">Built wit html an CSS,JavaScript </p>
 </div>
-<div class="col-md-6 mb-5">
+<div class="col-md-6 mb-5 text-center">
 <img src="images/weather.jpg" class="img-fluid rounded project-photo" alt="Odessapage">
 <h3 class="text-center">Weather-project</h3>
 <p class="text-center
