--- a/about.html
+++ b/about.html
@@ -43,7 +43,9 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/photocoder.png" alt="" class="img-fluid" />
+      <a href="https://www.freepik.com/free-vector/colourful-illustration-female-programmer-doing-her-job_5483074.htm#page=2&query=girl%20coding&position=37&from_view=search&track=ais">
+      <img src="images/photocoder.jpg" alt="" class="img-fluid photocoder" />
+      </a>
         </div>
       </div>
     </div>
