--- a/index.html
+++ b/index.html
@@ -27,12 +27,28 @@
     <title>Portfolio-project</title>
   </head>
   <body>
+    <div class="container"></div>
+    <nav class="d-flex justify-content-beetween">
+    <img src="/images/logo.svg"class="logo" alt="woman-coding">
+      <ul>
+        <li class="active">
+          <a href="/">Home</a>
+        </li>
+        <li><a href="/about.html">About</a>
+        </li>
+        <li>
+         <a href="/work.html">Work</a>
+        </li>
+        <li><a href="/contact.html">Contact</a>
+        </li>        
+        </ul>
+    </nav>
+  </div>
     <div class="hero">
       <h1>Hello,I am</h1>
-      
-      <p>Viktoriia</p>
-      <h2 class="m-5">Front-end developer based in Romania</h2>
-          <p class="text-center mt-5">Featured Project which my best projects be choice to show</p>
+            <p>Viktoriia</p>
+      <h2 class="m-5">Front-end deveper based in Romania </h2>
+  <p class="text-center mt-5">Featured Project which my best projects be choice to show</p>
       <a href="#" class="btn btn-branding">Contact me</a>
   </div>
   <div class="container">
