--- a/about.html
+++ b/about.html
@@ -30,6 +30,23 @@
     ></script>
   </head>
   <body>
+      <div class="container"></div>
+    <nav class="d-flex justify-content-beetween">
+    <img src="/images/logo.svg"class="logo" alt="woman-coding">
+      <ul>
+        <li class="active">
+          <a href="/">Home</a>
+        </li>
+        <li><a href="/about.html">About</a>
+        </li>
+        <li>
+         <a href="/work.html">Work</a>
+        </li>
+        <li><a href="/contact.html">Contact</a>
+        </li>        
+        </ul>
+    </nav>
+  </div>
     <div class="content-container">
       <div class="row">
         <div class="col-lg-6">
