--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,8 @@
 <p>
  <a href="mailto:team@shecodes.io">
 <i class="fa-solid fa-envelope" id="social"></i>
-abigaildove86@gmail.com</a>
+</a>
+<div>abigaildove86@gmail.com</div>
 </p>
 <h3>Linkedin</h3>
 <a href=" https://www.linkedin.com/in/frontenddevviktoriiasandul/?locale=en_US" target="blank">
