--- a/index.html
+++ b/index.html
@@ -84,17 +84,47 @@
      </div>
         <div class="row mb-5"> 
       <div class="col d-none d-lg-block" >
-         
-        <img src="images/weather.jpg" class="img-fluid rounded project-photo" alt="Weather-app">
+      <img src="images/weather.jpg" class="img-fluid rounded project-photo" alt="Weather-app">
             </div>
       <div class="col">
-        <div class="project-description">   
+      <div class="project-description mb-5">   
   <h2 class="mb-5">Weather-project</h2>
       <p class="mb-5 text-muted">
-      It is first time I used Java Script.I enjoyed making this work.
+        It is first time I used Java Script.I enjoyed making this work.
       </p>
       <a href=""class="btn-branding-outline">Learn more</a>
       </div>
-     </div>
-    </body>
+      </div>
+     <footer>
+ <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3"> Contact me </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="abigaildove86@gmail.com" class="email-link">
+            abigaildove86@gmail.com
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="" target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/frontenddevviktoriiasandul/" target="_blank">
+          <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+        </div>
+      </footer>
+      </footer>      
+  
+</div>
+</body>
 </html>
