--- a/work.html
+++ b/work.html
@@ -27,19 +27,20 @@
     <title>Portfolio-project</title>
   </head>
   <body>
-     <div class="container"></div>
-    <nav class="d-flex justify-content-beetween">
-    <img src="/images/logo.svg"class="logo" alt="woman-coding">
+     <div class="container">
+     <nav>
+    <img src="/images/logo.svg"class="logo" alt="Viktoriia-coding">
       <ul>
-        <li class="active">
-          <a href="/">Home</a>
+     <li>
+          <a href="/" title="Homepage">Home</a>
         </li>
-        <li><a href="/about.html">About</a>
+        <li><a href="/about.html" title="About me">About</a>
+        </li>
+        <li class="active">
+         <a href="/work.html" title="My work">Work</a>
         </li>
         <li>
-         <a href="/work.html">Work</a>
-        </li>
-        <li><a href="/contact.html">Contact</a>
+          <a href="/contact.html" title="Contact me ">Contact</a>
         </li>        
         </ul>
     </nav>
@@ -64,12 +65,6 @@
 <img src="images/odessa.jpg" class="img-fluid rounded project-photo" alt="Odessapage">
 <h3 class="text-center m-0">Weather-project</h3>
 <p class="text-center">Built wit html an CSS,JavaScript </p>
-</div>
-<div class="col-md-6 mb-5 text-center">
-<img src="images/weather.jpg" class="img-fluid rounded project-photo" alt="Odessapage">
-<h3 class="text-center">Weather-project</h3>
-<p class="text-center
-">Built wit html an CSS,JavaScript </p>
 </div>
 </div>
 </body>
