--- a/about.html
+++ b/about.html
@@ -30,19 +30,21 @@
     ></script>
   </head>
   <body>
-      <div class="container"></div>
-    <nav class="d-flex justify-content-beetween">
-    <img src="/images/logo.svg"class="logo" alt="woman-coding">
+      <div class="container">
+       <nav>
+    <img src="/images/logo.svg"class="logo" alt="Viktoriia-coding">
       <ul>
-        <li class="active">
-          <a href="/">Home</a>
+      <li>
+          <a href="/" title="Homepage">Home</a>
         </li>
-        <li><a href="/about.html">About</a>
+        <li class="active">
+          <a href="/about.html" title="About me">About</a>
         </li>
         <li>
-         <a href="/work.html">Work</a>
+         <a href="/work.html" title="My work">Work</a>
         </li>
-        <li><a href="/contact.html">Contact</a>
+        <li>
+          <a href="/contact.html" title="Contact me ">Contact</a>
         </li>        
         </ul>
     </nav>
