--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="Viktoriia is front-end developer based in Romania">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,22 +25,23 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <title>Portfolio-project</title>
+    <title>Front-end developer-Viktoriia Sandul     
+    </title>
   </head>
   <body>
-    <div class="container"></div>
-    <nav class="d-flex justify-content-beetween">
-    <img src="/images/logo.svg"class="logo" alt="woman-coding">
+  <div class="container">
+ <nav>
+    <img src="/images/logo.svg"class="logo" alt="Viktoriia-coding">
       <ul>
         <li class="active">
-          <a href="/">Home</a>
+          <a href="/" title="Homepage">Home</a>
         </li>
-        <li><a href="/about.html">About</a>
+        <li><a href="/about.html" title="About me">About</a>
         </li>
         <li>
-         <a href="/work.html">Work</a>
+         <a href="/work.html" title="My work">Work</a>
         </li>
-        <li><a href="/contact.html">Contact</a>
+        <li><a href="/contact.html" title="Contact me ">Contact</a>
         </li>        
         </ul>
     </nav>
@@ -49,7 +51,7 @@
             <p>Viktoriia</p>
       <h2 class="m-5">Front-end deveper based in Romania </h2>
   <p class="text-center mt-5">Featured Project which my best projects be choice to show</p>
-      <a href="#" class="btn btn-branding">Contact me</a>
+      <a href="/contact.html" class="btn btn-branding" title="Contact me">Contact me</a>
   </div>
   <div class="container">
     <div class="row mb-5"> 
@@ -99,7 +101,7 @@
  <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
