--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
             <p class="mb-5">
             Welcome to my personal website! I’m currently seeking new opportunities in front-end development. Open to work remotely and have flexible hours. I am proficient in HTML, CSS, and JavaScript. Thank you for visiting my website.
             </p>
-            <a href="" class="btn btn-branding">See my projects</a>
+            <a href="/work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
@@ -67,6 +67,34 @@
       </a>
         </div>
       </div>
-    </div>
-  </body>
+        <footer class="container">
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Viktoriia"> Contact me </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="abigaildove86@gmail.com" class="email-link" title="Email me">
+            abigaildove86@gmail.com
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="" target="_blank" title="Github profile">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.instagram.com/sandylvictoria/" target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/frontenddevviktoriiasandul/" target="_blank" title="Linkedin profile">
+          <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+        </div>
+        <p class="text-center mt-4">This project was coded by Viktoriia Sandul and i is <a href="https://github.com/VicroriaS/Portrolio-project" target="blank">open-soursed</a></p>
+      </footer>
+          </div>
+     </body>
 </html>
