--- a/index.html
+++ b/index.html
@@ -66,13 +66,12 @@
       <p class="mb-5 text-muted">
         This is my first project.I love Opera and Ballet theatre and it is fascinating.
       </p>
-      <a href=""class="btn-branding-outline">Learn more</a>
+      <a href="/work.html"class="btn-branding-outline">Learn more</a>
       </div>
      </div>
         <div class="row mb-5"> 
       <div class="col d-none d-lg-block" >
-       
-        <img src="images/odessa.jpg" class="img-fluid rounded project-photo" alt="Odessa">
+    <img src="images/odessa.jpg" class="img-fluid rounded project-photo" alt="Odessa">
      </div>
       
       <div class="col">
@@ -81,7 +80,7 @@
       <p class="mb-5 text-muted">
         This is my first project.I love Opera and Ballet theatre and it is fascinating.
       </p>
-      <a href=""class="btn-branding-outline">Learn more</a>
+      <a href="/work.html"class="btn-branding-outline">Learn more</a>
       </div>
      </div>
         <div class="row mb-5"> 
@@ -94,39 +93,37 @@
       <p class="mb-5 text-muted">
         It is first time I used Java Script.I enjoyed making this work.
       </p>
-      <a href=""class="btn-branding-outline">Learn more</a>
+      <a href="/work.html"class="btn-branding-outline">Learn more</a>
       </div>
       </div>
-     <footer>
- <footer>
+      <footer class="container">
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
             <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3"> Contact me </a>
+            <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Viktoriia"> Contact me </a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="abigaildove86@gmail.com" class="email-link">
+          <a href="abigaildove86@gmail.com" class="email-link" title="Email me">
             abigaildove86@gmail.com
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="" target="_blank">
+          <a href="" target="_blank" title="Github profile">
             <i class="fab fa-github"></i>
           </a>
-          <a href="" target="_blank">
+          <a href="https://www.instagram.com/sandylvictoria/" target="_blank">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="https://www.linkedin.com/in/frontenddevviktoriiasandul/" target="_blank">
+          <a href="https://www.linkedin.com/in/frontenddevviktoriiasandul/" target="_blank" title="Linkedin profile">
           <i class="fa-brands fa-linkedin-in"></i>
           </a>
         </div>
+        <p class="text-center mt-4">This project was coded by Viktoriia Sandul and i is <a href="https://github.com/VicroriaS/Portrolio-project" target="blank">open-soursed</a></p>
       </footer>
-      </footer>      
-  
-</div>
+      </div>
 </body>
 </html>
