--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,36 @@
 
 <h3>Github</h3>
 <a href="https://github.com/VicroriaS" target="blank"><i class="fa-brands fa-square-github"id="social"></i></a>
+
+<footer class="container mt-5">
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Viktoriia"> Contact me </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:abigaildove86@gmail.com" class="email-link" title="Email me">
+            abigaildove86@gmail.com
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="" target="_blank" title="Github profile">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.instagram.com/sandylvictoria/" target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/frontenddevviktoriiasandul/" target="_blank" title="Linkedin profile">
+          <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+        </div>
+        <p class="text-center mt-4">This project was coded by Viktoriia Sandul and i is <a href="https://github.com/VicroriaS/Portrolio-project" target="blank">open-soursed</a></p>
+      </footer>
 </div>
+   
 </body>
 </html>
