mailto:abigaildove86@gmail.com

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 <h1 class="mb-5">Let's get in touch</h1>
 <h3>Email</h3>
 <p>
- <a href="mailto:team@shecodes.io">
+ <a href="mailto:abigaildove86@gmail.com">
 <i class="fa-solid fa-envelope" id="social"></i>
 </a>
 <div>abigaildove86@gmail.com</div>
