--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="" target="_blank" title="Github profile">
+          <a href="https://github.com/VicroriaS" target="_blank" title="Github profile">
             <i class="fab fa-github"></i>
           </a>
           <a href="https://www.instagram.com/sandylvictoria/" target="_blank">
